# tinyizer

./: .gitignore  .nanobot-lock  CMakeLists.txt  DESIGN.md  LICENSE  README.md  test.css  test.js  test_page.html  test_page2.html  test_page3.html  test_rules.css
.github/workflows/: build.yml  dispatch-benchmark.yml
benchmarks/: baseline.json  pipeline.sh  regression.sh  run.sh
build3/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  tinyizer
build3/tests/: CTestTestfile.cmake  Makefile  cmake_install.cmake
build4/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  tinyizer
build4/tests/: CTestTestfile.cmake  Makefile  cmake_install.cmake  test_css_parser  test_full_pipeline  test_html_parser
build_check/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  tinyizer
build_check/tests/: CTestTestfile.cmake  Makefile  cmake_install.cmake
src/: main.cpp
src/ir/: css_rule.cpp  css_rule.h  dom_node.cpp  dom_node.h  identifier.cpp  identifier.h  js_scope.cpp  js_scope.h  unified_doc.cpp  unified_doc.h
src/parser/: css_parser.cpp  css_parser.h  html_parser.cpp  html_parser.h  js_parser.cpp  js_parser.h  tokenizer.cpp  tokenizer.h
src/transform/: brotli_reorder.cpp  cross_identifier.cpp  css_minifier.cpp  css_serializer.cpp  css_shorthand.cpp  dead_css.cpp  dead_js.cpp  html_minifier.cpp  js_constant_fold.cpp  js_minifier.cpp  obfuscator.cpp  optimizer.cpp  optimizer.h  serializer.h
src/util/: frequency_map.cpp  frequency_map.h  string_pool.cpp  string_pool.h
tests/: CMakeLists.txt  test_css_parser.cpp  test_full_pipeline.cpp  test_html_parser.cpp
